Added support for FPM as a PHP execution mode, on systems that have a system package which runs an FPM pool server.
Resellers and domain owners can be granted the ability to migrate backups from other control panels, like cPanel and Plesk.
Added a button to the Manage SSL Certifcate page and a flag to the modify-web API command to break shared certificate linkage.
Added the start-stop-script API command to manage the servers behind Ruby and Node.JS scripts.
Virtualmin will now also generate SSHFP DNS records (for SSH host keys) when it creates TLSA records.
---- Changes since 5.06 ----
Updated the FosWiki script installer to version 2.1.3, WHMCS to 6.3.2 and 7.1.1, Node.js to 7.6.0, Magento to 2.1.5, Ghost to 0.11.7, DokuWiki to 2017-02-19a, NextCloud to 11.0.2 and 10.0.4, Piwik to 3.0.2, and Coppermine to 1.5.46.
---- Changes since 5.07 ----
Updates the Node.JS installer to version 7.7.4, DokuWiki to 2017-02-19b, Roundcube to 1.2.4, Mantis to 2.2.0, Moodle to 3.2.2 and 2.7.19, Rainloop to 1.11.0.203, Mantis to 2.2.1 and 1.3.7, Drupal to 8.2.7, phpBB to 3.2, and Wordpress to 4.7.3.
The SSL certificate for all virtual servers will now be configured for use in the Virtualmin UI on port 10000, so that URLs like https://admin.domain.com:10000/ work without cert errors.
Chroot jails for virtual server domain owners can now be setup at domain creation time or afterwards. This limits the files visible to SSH sessions and PHP apps run via FPM to the jail directory.
SSL certificates can now be copied to Dovecot even for virtual servers that don't have their own private IP address.